<resources>
    <string name="app_name">SendScribbles</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_title">Login</string>
    <string name="action_username">Username</string>
    <string name="action_password">Password</string>
    <string name="action_confirm_password">Confirm Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="Register_title">Register</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_password_2">Passwords must match</string>
    <string name="go_ToLogin">Already Have An Account? Click here</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_out">Logout</string>
    <string name="welcome_login_user">Welcome to ScribbleSends</string>
    <string name="share_button_desc">Share Button</string>
    <string name="favorite_button_desc">Favorite Button</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>